Some minor updates and cleanups

--- a/Polynomial-time proofs that groups are hyperbolic.ipynb
+++ b/Polynomial-time proofs that groups are hyperbolic.ipynb
@@ -13,9 +13,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "#I  method installed for Size matches more than one declaration\n",
+      "#I  method installed for Size matches more than one declaration\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "true"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {
+      "text/plain": ""
+     },
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "LoadPackage(\"anatph\");"
    ]
@@ -33,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -42,7 +63,7 @@
        "<pregroup presentation with 3 generators and 1 relators>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 2,
      "metadata": {
       "text/plain": ""
      },
@@ -62,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +92,7 @@
        "true"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {
       "text/plain": ""
      },
@@ -86,10 +107,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command `TriSH(m,n)` creates a quotient of a $(2,3,m)-$triangle group by the commutator of the two generators raised to the $n-$th power, i.e.\n",
+    "The command `TriangleCommutatorQuotient(m,n)` creates a quotient of a $(2,3,m)-$triangle group by the commutator of the two generators raised to the $n-$th power, i.e.\n",
     "\n",
     "$$\n",
-    "   TriSH(m,n) = \\left< x, y ~|~ x^2, y^3, (xy)^m, (xyxy^{-1})^n \\right>\n",
+    "   \\operatorname{TriangleCommutatorQuotient}(m,n) = \\left< x, y ~|~ x^2, y^3, (xy)^m, (xyxy^{-1})^n \\right>\n",
     "$$\n",
     "\n",
     "cf Theorem 9.5"
@@ -104,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +134,7 @@
        "true"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 5,
      "metadata": {
       "text/plain": ""
      },
@@ -121,7 +142,7 @@
     }
    ],
    "source": [
-    "thm95 := TriSH(13, 7);;\n",
+    "thm95 := TriangleCommutatorQuotient(13, 7);;\n",
     "IsHyperbolic(thm95, 1/10);"
    ]
   },
@@ -134,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +164,7 @@
        "[ fail, [ [ 1, 0, 0, 0 ], [ 1, 4, 1, 31/210 ], [ 3, 7, 2, 2/15 ], [ 2, 6, 2, 23/420 ], [ 1, 8, 2, 31/105 ], [ 1, 6, 2, 29/210 ], [ 2, 8, 2, 19/420 ], [ 1, 10, 3, 2/7 ], [ 3, 9, 3, 13/105 ], [ 3, 11, 3, 59/210 ], [ 2, 10, 3, 17/84 ], [ 1, 12, 3, 31/70 ], [ 2, 12, 3, 27/140 ], [ 3, 13, 4, 19/70 ], [ 1, 14, 4, 13/30 ] ], [ 1, 10, 3, 2/7 ] ]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 7,
      "metadata": {
       "text/plain": ""
      },
@@ -151,7 +172,7 @@
     }
    ],
    "source": [
-    "thm95_2 := TriSH(7, 19);;\n",
+    "thm95_2 := TriangleCommutatorQuotient(7, 19);;\n",
     "IsHyperbolic(thm95_2, 1/10);"
    ]
   },
@@ -164,29 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<group with 2 generators>"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {
-      "text/plain": ""
-     },
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "F := FreeGroup(\"x\", \"y\");"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -195,24 +194,14 @@
      "text": [
       "#I  Assigned the global variables [ x, y ]\n"
      ]
-    }
-   ],
-   "source": [
-    "AssignGeneratorVariables(F);"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [
+    },
     {
      "data": {
       "text/plain": [
        "[ fail, [ [ 1, 0, 0, 0 ], [ 2, 1, 1, 13/120 ], [ 1, 2, 2, 13/60 ], [ 2, 3, 3, 13/40 ], [ 1, 4, 4, 13/30 ] ], [ 2, 3, 3, 13/40 ] ]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 12,
      "metadata": {
       "text/plain": ""
      },
@@ -220,10 +209,81 @@
     }
    ],
    "source": [
+    "F := FreeGroup(\"x\", \"y\");;\n",
+    "AssignGeneratorVariables(F);;\n",
     "rred := [ y^3 ];;\n",
     "rgreen := [ x^4, (x*y)^4 ];;\n",
     "IsHyperbolic(F, rred, rgreen, 1/10);"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "#I  Global variable `x' is already defined and will be overwritten\n",
+      "#I  Global variable `y' is already defined and will be overwritten\n",
+      "#I  Assigned the global variables [ x, y, t ]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "true"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {
+      "text/plain": ""
+     },
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "F := FreeGroup(\"x\", \"y\", \"t\");;\n",
+    "AssignGeneratorVariables(F);;\n",
+    "rred := [y^3, x^2 * t];;\n",
+    "rgreen := [t^2, (x*y)^4];;\n",
+    "IsHyperbolic(F, rred, rgreen, 1/10);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "#I  Assigned the global variables [ a, b, c, d, e ]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Error, PregroupByTable: P5 violated\n"
+     ]
+    }
+   ],
+   "source": [
+    "F := FreeGroup(\"a\",\"b\",\"c\",\"d\",\"e\");;\n",
+    "AssignGeneratorVariables(F);;\n",
+    "rred := [ a*b*c^-1, b*c*d^-1, c*d*e^-1, d*e*a^-1, e*a*b^-1 ];;\n",
+    "IsHyperbolic(F, rred, [], 1/10);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
